--- a/articles/cost-management/index.yml
+++ b/articles/cost-management/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Azure Cost Management-dokumentation
 metadata:
-  title: "Dokumentation om Cost Management – Självstudier, API-referens | Microsoft Docs"
-  description: "Azure Cost Management är en kostnadshanteringslösning med flera moln som hjälper dig att bättre använda Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
+  title: Dokumentation om Cost Management – Självstudier, API-referens | Microsoft Docs
+  description: Azure Cost Management är en kostnadshanteringslösning med flera moln som hjälper dig att bättre använda Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier.
   services: cost-management
   author: bandersmsft
   manager: carmonm
@@ -18,13 +18,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 03/16/2018
+  ms.locfileid: "29935340"
 abstract:
-  description: "Azure Cost Management som licensieras av Cloudyn, ett dotterbolag till Microsoft, är en kostnadshanteringslösning med flera moln som hjälper dig att bättre utnyttja och hantera Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier."
+  description: Azure Cost Management som licensieras av Cloudyn, ett dotterbolag till Microsoft, är en kostnadshanteringslösning med flera moln som hjälper dig att bättre utnyttja och hantera Azure och andra molnresurser. Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med våra snabbstarter och självstudier.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Läs om hur du registrerar ditt Azure-avtal eller din prenumerationsinformation med Cost Management och börja visa kostnadsdata."
+    text: Läs om hur du registrerar ditt Azure-avtal eller din prenumerationsinformation med Cost Management och börja visa kostnadsdata.
   - type: list
     style: icon48
     items:
@@ -32,15 +33,15 @@ sections:
         src: https://docs.microsoft.com/media/common/i_portal.svg
       text: Visa kostnadsdata
       href: quick-register-azure-sub
-- title: "Stegvisa självstudier"
+- title: Stegvisa självstudier
   items:
   - type: paragraph
-    text: "Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med Cost Management."
+    text: Lär dig mer om att granska användning och kostnader, aktivt hantera kostnader, göra prognoser för utgifter och optimera kostnader med Cost Management.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"tutorial-review-usage\">Granska användning och kostnader för att identifiera avvikelser och effektivitet</a>"
+    - html: <a href="tutorial-review-usage">Granska användning och kostnader för att identifiera avvikelser och effektivitet</a>
     - html: <a href="tutorial-forecast-spending">Prognostisera framtida utgifter</a>
-    - html: "<a href=\"tutorial-manage-costs\">Hantera kostnader med kostnadsfördelning och detaljerad kostnadsrapportering</a>"
+    - html: <a href="tutorial-manage-costs">Hantera kostnader med kostnadsfördelning och detaljerad kostnadsrapportering</a>
     - html: <a href="tutorial-optimize-reserved-instances">Optimera reserverade instanser</a>
-    - html: "<a href=\"tutorial-user-access\">Tilldela åtkomst till Cost Management-data</a>"
+    - html: <a href="tutorial-user-access">Tilldela åtkomst till Cost Management-data</a>
