--- a/articles/application-insights/index.yml
+++ b/articles/application-insights/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Application Insights-dokumentation
 metadata:
-  title: "Dokumentation om Application Insights – självstudier, API-referens | Microsoft Docs"
-  description: "Application Insights är en utökningsbar APM-tjänst (Application Performance Management) för webbutvecklare som skapar och hanterar appar på flera plattformar. Lär dig att identifiera och diagnostisera problem och förstå användning för dina webbappar och tjänster med hjälp av våra snabbstarter, självstudier och referensdokumentation."
+  title: Dokumentation om Application Insights – självstudier, API-referens | Microsoft Docs
+  description: Application Insights är en utökningsbar APM-tjänst (Application Performance Management) för webbutvecklare som skapar och hanterar appar på flera plattformar. Lär dig att identifiera och diagnostisera problem och förstå användning för dina webbappar och tjänster med hjälp av våra snabbstarter, självstudier och referensdokumentation.
   services: application-insights
   author: czeumault
   manager: carolz
@@ -18,13 +18,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 10/25/2017
+  ms.locfileid: "23500702"
 abstract:
-  description: "Application Insights är en utökningsbar APM-tjänst (Application Performance Management) för webbutvecklare som skapar och hanterar appar på flera plattformar. Lär dig att identifiera och diagnostisera problem och förstå användning för dina webbappar och tjänster med hjälp av våra snabbstarter, självstudier och referensdokumentation."
+  description: Application Insights är en utökningsbar APM-tjänst (Application Performance Management) för webbutvecklare som skapar och hanterar appar på flera plattformar. Lär dig att identifiera och diagnostisera problem och förstå användning för dina webbappar och tjänster med hjälp av våra snabbstarter, självstudier och referensdokumentation.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att övervaka ditt program med Azure Application Insights."
+    text: Lär dig att övervaka ditt program med Azure Application Insights.
   - type: list
     style: icon48
     items:
@@ -48,30 +49,30 @@ sections:
         src: /azure/application-insights/media/index/mobile-center.png
       text: Mobil
       href: app-insights-mobile-center-quickstart
-- title: "Stegvisa självstudier"
+- title: Stegvisa självstudier
   items:
   - type: paragraph
-    text: "Lär dig mer om att kontinuerligt förbättra prestanda och användning av dina webbappar."
+    text: Lär dig mer om att kontinuerligt förbättra prestanda och användning av dina webbappar.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"app-insights-tutorial-runtime-exceptions\">Hitta och diagnostisera körningsundantag</a>"
+    - html: <a href="app-insights-tutorial-runtime-exceptions">Hitta och diagnostisera körningsundantag</a>
     - html: <a href="app-insights-tutorial-performance">Hitta och diagnostisera prestandaproblem</a>
-    - html: "<a href=\"app-insights-tutorial-alert\">Övervakning och aviseringar om programmets hälsotillstånd</a>"
-    - html: "<a href=\"app-insights-tutorial-users\">Analysera kundens användning och information</a>"
+    - html: <a href="app-insights-tutorial-alert">Övervakning och aviseringar om programmets hälsotillstånd</a>
+    - html: <a href="app-insights-tutorial-users">Analysera kundens användning och information</a>
     - html: <a href="app-insights-tutorial-dashboards">Skapa anpassade KPI-instrumentpaneler</a>
-- title: "Kostnadsfri videoutbildning för PluralSight"
+- title: Kostnadsfri videoutbildning för PluralSight
   items:
   - type: list
     style: cards
     className: cardsFTitle
     items:
-    - title: "Utveckla med .NET för Azure"
+    - title: Utveckla med .NET för Azure
       href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-    - title: "Utveckla med Node.js för Azure"
+    - title: Utveckla med Node.js för Azure
       href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
@@ -82,10 +83,10 @@ sections:
     style: cards
     className: cardsD
     items:
-    - title: "Språk"
-      html: "<p><a href=\"https://docs.loganalytics.io/\">Analys</a></p><p><a href=\"/dotnet/api/microsoft.applicationinsights\">NET</a></p><p><a href=\"/java/api/com.microsoft.applicationinsights\">Java</a></p><p><a href=\"https://github.com/Microsoft/ApplicationInsights-JS/blob/master/API-reference.md\">JavaScript</a></p><p><a href=\"https://dev.applicationinsights.io/\">API för dataåtkomst</a></p>"
+    - title: Språk
+      html: <p><a href="https://docs.loganalytics.io/">Analys</a></p><p><a href="/dotnet/api/microsoft.applicationinsights">NET</a></p><p><a href="/java/api/com.microsoft.applicationinsights">Java</a></p><p><a href="https://github.com/Microsoft/ApplicationInsights-JS/blob/master/API-reference.md">JavaScript</a></p><p><a href="https://dev.applicationinsights.io/">API för dataåtkomst</a></p>
     - title: Datamodell
-      html: "<p><a href=\"application-insights-data-model-request-telemetry\">Förfrågan</a></p><p><a href=\"application-insights-data-model-dependency-telemetry\">Beroende</a></p><p><a href=\"application-insights-data-model-exception-telemetry\">Undantag</a></p><p><a href=\"application-insights-data-model-trace-telemetry\">Spårning</a></p><p><a href=\"application-insights-data-model-event-telemetry\">Händelse</a></p><p><a href=\"application-insights-data-model-metric-telemetry\">Mått</a></p><p><a href=\"application-insights-data-model-context\">Kontext</a></p>"
+      html: <p><a href="application-insights-data-model-request-telemetry">Förfrågan</a></p><p><a href="application-insights-data-model-dependency-telemetry">Beroende</a></p><p><a href="application-insights-data-model-exception-telemetry">Undantag</a></p><p><a href="application-insights-data-model-trace-telemetry">Spårning</a></p><p><a href="application-insights-data-model-event-telemetry">Händelse</a></p><p><a href="application-insights-data-model-metric-telemetry">Mått</a></p><p><a href="application-insights-data-model-context">Kontext</a></p>
     - title: Telemetrikorrelation
       html: <p><a href="application-insights-correlation">Telemetrikorrelation</a></p>
     - title: Kodexempel
