--- a/articles/batch/index.yml
+++ b/articles/batch/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Dokumentation om Batch
 metadata:
-  title: "Dokumentation om Batch – Självstudier, API-referens | Microsoft Docs"
-  description: "Använd Batch för att effektivt köra storskaliga parallella program och HPC-program (databehandling med höga prestanda) i molnet. Definiera Azure-beräkningsresurser för att köra dina program parallellt eller i stor skala utan manuell konfigurering eller hantering av infrastrukturen. Schemalägg beräkningsintensiva uppgifter och lägg till eller ta bort beräkningsresurser dynamiskt utifrån dina krav. Lär dig hur du använder Azure Batch med våra snabbstarter, självstudier och exempel."
+  title: Dokumentation om Batch – Självstudier, API-referens | Microsoft Docs
+  description: Använd Batch för att effektivt köra storskaliga parallella program och HPC-program (databehandling med höga prestanda) i molnet. Definiera Azure-beräkningsresurser för att köra dina program parallellt eller i stor skala utan manuell konfigurering eller hantering av infrastrukturen. Schemalägg beräkningsintensiva uppgifter och lägg till eller ta bort beräkningsresurser dynamiskt utifrån dina krav. Lär dig hur du använder Azure Batch med våra snabbstarter, självstudier och exempel.
   services: batch
   author: czeumault
   manager: carolz
@@ -18,13 +18,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 02/28/2018
+  ms.locfileid: "29686579"
 abstract:
-  description: "Använd Batch för att effektivt köra storskaliga parallella program och HPC-program (databehandling med höga prestanda) i molnet. Definiera Azure-beräkningsresurser för att köra dina program parallellt eller i stor skala utan manuell konfigurering eller hantering av infrastrukturen. Schemalägg beräkningsintensiva uppgifter och lägg till eller ta bort beräkningsresurser dynamiskt utifrån dina krav. Lär dig hur du använder Azure Batch med våra snabbstarter, självstudier och exempel."
+  description: Använd Batch för att effektivt köra storskaliga parallella program och HPC-program (databehandling med höga prestanda) i molnet. Definiera Azure-beräkningsresurser för att köra dina program parallellt eller i stor skala utan manuell konfigurering eller hantering av infrastrukturen. Schemalägg beräkningsintensiva uppgifter och lägg till eller ta bort beräkningsresurser dynamiskt utifrån dina krav. Lär dig hur du använder Azure Batch med våra snabbstarter, självstudier och exempel.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du kör ditt första Batch-jobb i Azure."
+    text: Lär dig hur du kör ditt första Batch-jobb i Azure.
   - type: list
     style: icon48
     items:
@@ -44,10 +45,10 @@ sections:
         src: https://docs.microsoft.com/en-us/media/logos/logo_python.svg
       text: Python
       href: quick-run-python
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig hur du kör beräkningsintensiva arbetsbelastningar på Batch."
+    text: Lär dig hur du kör beräkningsintensiva arbetsbelastningar på Batch.
   - type: list
     style: ordered
     items:
@@ -70,7 +71,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/batch">Azure CLI</a></p><p><a href="/powershell/module/azurerm.batch">Azure PowerShell</a></p>
-    - title: "Språk"
+    - title: Språk
       html: <p><a href="/dotnet/api/overview/azure/batch">.NET</a></p><p><a href="/java/api/overview/azure/batch">Java</a></p><p><a href="/javascript/api/overview/azure/batch">Node.js</a></p><p><a href="/python/api/overview/azure/batch">Python</a></p>
     - title: REST
-      html: "<p><a href=\"/rest/api/batchservice\">REST API för Batch-tjänsten</a></p><p><a href=\"/rest/api/batchmanagement/\">REST API för Batch Management</a></p>"
+      html: <p><a href="/rest/api/batchservice">REST API för Batch-tjänsten</a></p><p><a href="/rest/api/batchmanagement/">REST API för Batch Management</a></p>
