--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -18,6 +18,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 04/19/2018
+  ms.locfileid: "31598769"
 abstract:
   description: Lär dig hur du använder Azure Machine Learning med dess fullständigt hanterade tjänster för att skapa, distribuera och hantera maskininlärnings- och AI-modeller i molnet. Självstudier, snabbstarter, referenser och exempel visar dig hur du skapar och distribuerar modeller för alla program.
 sections:
