--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -18,6 +18,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 03/23/2018
+  ms.locfileid: "30166750"
 abstract:
   description: Lär dig att använda Data Factory, en tjänst för molndataintegrering, för att ordna datalagrings-, rörelse- och bearbetningstjänster i automatiserade datapipelines. Självstudier och annan dokumentation visar hur du konfigurerar och hanterar datapipelines, samt flyttar och omvandlar data för analys. <p>För närvarande finns en förhandsversion av V2 av Data Factory. Versionen V1 är allmänt tillgänglig. Om du använder V1 av Data Factory-tjänsten går du till <a href=/azure/data-factory/v1/data-factory-introduction>V1-dokumentationen.</a></p>
   aside:
