--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Azure Event Grid-dokumentation
 metadata:
-  title: "Azure Event Grid-dokumentation – självstudier, API-referens"
-  description: "Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid."
+  title: Azure Event Grid-dokumentation – självstudier, API-referens
+  description: Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid.
   services: event-grid
   author: czeumault
   manager: carolz
@@ -18,13 +18,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 02/01/2018
+  ms.locfileid: "28921777"
 abstract:
-  description: "Azure Event Grid är en fullständigt hanterad smart händelsedirigeringstjänst för enhetlig händelsebearbetning med en offentlig prenumerationsmodell. Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid. Lär dig hur du använder Azure Event Grid med våra snabbstarter, självstudier och exempel."
+  description: Azure Event Grid är en fullständigt hanterad smart händelsedirigeringstjänst för enhetlig händelsebearbetning med en offentlig prenumerationsmodell. Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid. Lär dig hur du använder Azure Event Grid med våra snabbstarter, självstudier och exempel.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du skapar och prenumererar på anpassade händelser."
+    text: Lär dig hur du skapar och prenumererar på anpassade händelser.
   - type: list
     style: icon48
     items:
@@ -41,7 +42,7 @@ sections:
       text: Azure Portal
       href: /azure/event-grid/custom-event-quickstart-portal
   - type: paragraph
-    text: "Lär dig hur du dirigerar Blob Storage-händelser."
+    text: Lär dig hur du dirigerar Blob Storage-händelser.
   - type: list
     style: icon48
     items:
@@ -53,15 +54,15 @@ sections:
         src: /azure/event-grid/media/index/logo_powershell.svg
       text: Azure PowerShell
       href: /azure/storage/blobs/storage-blob-event-quickstart-powershell?toc=%2fazure%2fevent-grid%2ftoc.json
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig hur du utvecklar program som reagerar på händelser."
+    text: Lär dig hur du utvecklar program som reagerar på händelser.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app\">Övervaka händelser i virtuella datorer med logiska appar</a>"
-    - html: "<a href=\"/azure/event-grid/resize-images-on-storage-blob-upload-event\">Ändra storlek på överförda bilder</a>"
+    - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Övervaka händelser i virtuella datorer med logiska appar</a>
+    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Ändra storlek på överförda bilder</a>
     - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Integrera Azure Automation med Event Grid</a>
 - title: Referens
   items:
@@ -74,4 +75,4 @@ sections:
     - title: REST API:er
       html: <p><a href="/rest/api/eventgrid">REST</a></p>
     - title: Scheman
-      html: "<p><a href=\"/azure/event-grid/subscription-creation-schema \">Prenumerationsschema</a></p><p><a href=\"/azure/event-grid/event-schema\">Händelseschema</a></p>"
+      html: <p><a href="/azure/event-grid/subscription-creation-schema ">Prenumerationsschema</a></p><p><a href="/azure/event-grid/event-schema">Händelseschema</a></p>
