--- a/articles/hdinsight/index.yml
+++ b/articles/hdinsight/index.yml
@@ -18,6 +18,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 05/07/2018
+  ms.locfileid: "33778672"
 abstract:
   description: Lär dig hur du använder Azure HDInsight för att analysera strömmande eller historiska data. Självstudier och annan dokumentation visar hur du skapar kluster, bearbetar och analyserar stordata och utvecklar lösningar med de populäraste ramverken med öppen källkod, t.ex. Hadoop, Spark, Hive, LLAP, Kafka, Storm, och R.<p>Azure HDInsight är en fullständigt hanterad analystjänst med fullständigt spektrum med öppen källkod för företag. HDInsight är en molnbaserad tjänst som gör det enkelt, snabbt och kostnadseffektivt att bearbeta stora mängder data. HDInsight stöder också en mängd olika scenarier, t.ex. extrahering, transformering och inläsning (ETL); informationslager; maskininlärning; och IoT.</p>
   aside:
