--- a/articles/blockchain-workbench/index.yml
+++ b/articles/blockchain-workbench/index.yml
@@ -18,6 +18,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 05/07/2018
+  ms.locfileid: "33765908"
 abstract:
   description: Lär dig hur du skapar blockkedjeprogram. Självstudierna, API-referenserna och övrig dokumentation visar hur du distribuerar Azure Blockchain Workbench och skapar för att skapa och använda blockkedjeprogram i Azure.
 sections:
