--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -18,6 +18,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 05/07/2018
+  ms.locfileid: "33767962"
 abstract:
   description: Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.
 sections:
