--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -59,16 +59,16 @@
       href: create-account-cli-how-to.md
     - name: 'Åtkomst till API:er – CLI'
       href: access-api-cli-how-to.md
-    - name: Händelser för jobbstatus – CLI
+    - name: Övervaka händelser för jobbtillstånd – CLI
       href: job-state-events-cli-how-to.md
+    - name: Anpassa förinställningar för transformering – .NET Core
+      href: customize-encoder-presets-how-to.md
     - name: Överföra innehåll
       items:
         - name: 'Från HTTP(:er) – .NET'
           href: job-input-from-http-how-to.md
         - name: Från en lokal fil – .NET
           href: job-input-from-local-file-how-to.md
-    - name: Anpassa förinställningar för transformering – .NET Core
-      href: customize-encoder-presets-how-to.md
 - name: Referens
   items:
     - name: OpenAPI-specifikation (Swagger)
