--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -632,6 +632,10 @@
           href: service-fabric-troubleshoot-local-cluster-setup.md
         - name: Diagnosticera vanliga scenarier
           href: service-fabric-diagnostics-common-scenarios.md
+    - name: Bästa praxis
+      items:
+        - name: Checklista för produktionsberedskap
+          href: service-fabric-production-readiness-checklist.md
 - name: Referens
   items:
     - name: Azure PowerShell
