commit translated contents

--- a/articles/power-bi-embedded/TOC.yml
+++ b/articles/power-bi-embedded/TOC.yml
@@ -4,12 +4,14 @@
   items:
     - name: Vad är Power BI Embedded?
       href: what-is-power-bi-embedded.md
-- name: Kom igång
+- name: Självstudier
+  items:
+    - name: Exempel på att bädda in innehåll för kunder
+      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-embed-sample-app-owns-data/'
+- name: Begrepp
   items:
     - name: Kom igång med Power BI Embedded
       href: get-started.md
-    - name: Kom igång med ett exempel
-      href: 'https://powerbi.microsoft.com/documentation/powerbi-developer-embed-sample-app-owns-data/'
 - name: Gör så här för att
   items:
     - name: Hantera kapacitet
