--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -201,7 +201,13 @@
         - name: Använd Fjärrskrivbord
           href: use-remote-desktop.md
         - name: Ansluta virtuell dator till Azure Active Directory
-          href: join-redhat-linux-vm-to-azure-active-directory-domain-service.md
+          items:
+            - name: Red Hat Enterprise Linux
+              href: ../../active-directory-domain-services/active-directory-ds-join-rhel-linux-vm.md
+            - name: CentOS
+              href: ../../active-directory-domain-services/active-directory-ds-join-centos-linux-vm.md
+            - name: Ubuntu
+              href: ../../active-directory-domain-services/active-directory-ds-join-ubuntu-linux-vm.md
         - name: Logga in med autentiseringsuppgifter för Azure Active Directory
           href: login-using-aad.md
         - name: Uppdateringar och korrigeringar
