--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -343,7 +343,7 @@
         - name: Läs in data med BCP
           href: sql-database-load-from-csv-with-bcp.md
         - name: Läs in data med ADF
-          href: ../data-factory/connector-azure-sql-database.md
+          href: ../data-factory/connector-azure-sql-database.md?toc=/azure/sql-database/toc.json
         - name: Synkronisera data
           href: sql-database-get-started-sql-data-sync.md
     - name: Övervaka och finjustera
