--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -7,16 +7,17 @@ metadata:
   services: active-directory-b2c
   author: davidmu1
   manager: mtillman
-  ms.service: active-directory-b2c
+  ms.service: active-directory
+  ms.component: B2C
   ms.topic: landing-page
   ms.date: 03/29/2018
   ms.author: davidmu
-  ms.openlocfilehash: 000874bd089583cfc75dfa0a4d28769b91808a11
-  ms.sourcegitcommit: 6e43006c88d5e1b9461e65a73b8888340077e8a2
+  ms.openlocfilehash: a70e3fe60291a0ee50dbaa4bd3caa460ff12ffef
+  ms.sourcegitcommit: d8ffb4a8cef3c6df8ab049a4540fc5e0fa7476ba
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/30/2018
-  ms.locfileid: "32308873"
+  ms.lasthandoff: 06/20/2018
+  ms.locfileid: "36284273"
 abstract:
   description: Azure Active Directory (Azure AD) B2C är en identitetshanteringstjänst som hjälper dig att anpassa och styra hur kunderna registrerar sig, loggar in och hanterar sina profiler när de använder dina program. Detta omfattar program som har utvecklas för bland annat iOS, Android och .NET. Azure AD B2C möjliggör dessa åtgärder samtidigt som kundernas identiteter skyddas. Lär dig hur du använder Azure AD B2C med våra snabbstarter, självstudier och exempel.
   aside:
