--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -205,6 +205,8 @@
           href: backup-azure-mars-troubleshoot.md
         - name: Azure-filresurs
           href: troubleshoot-azure-files.md
+        - name: SQL Server
+          href: backup-sql-server-azure-troubleshoot.md
 - name: Referens
   items:
     - name: .NET
