--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -77,6 +77,8 @@
           href: edit-api.md
     - name: Etablera och skala
       items:
+        - name: Kapacitetsmått
+          href: api-management-capacity.md
         - name: Uppgradera och skala
           href: upgrade-and-scale.md
         - name: Konfigurera ett anpassat domännamn
