--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -328,6 +328,8 @@ items:
                 href: mongodb-readpreference.md
               - name: Indexering
                 href: mongodb-indexing.md
+              - name: TTL i MongoDB
+                href: mongodb-ttl.md
               - name: Visualisera din information med Power BI
                 href: powerbi-visualize.md
               - name: Hantera Storage Explorer
