--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -398,6 +398,8 @@
           href: how-to-create-schedule-trigger.md
         - name: Skapa en utlösare för rullande fönster
           href: how-to-create-tumbling-window-trigger.md
+        - name: Skapa en händelsebaserad utlösare
+          href: how-to-create-event-trigger.md
 - name: Referens
   items:
     - name: .NET
