--- a/articles/monitoring/toc.yml
+++ b/articles/monitoring/toc.yml
@@ -48,7 +48,7 @@
       items:
         - name: Översikt över behållarövervakning
           href: monitoring-container-overview.md
-        - name: Prestanda för AKS-behållare
+        - name: AKS-behållarhälsa
           href: monitoring-container-health.md
         - name: Övervakning av Docker- och Windows-behållare
           href: ../log-analytics/log-analytics-containers.md?toc=%2fazure%2fmonitoring%2ftoc.json
