--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Virtual Network
+title: Dokumentation om Virtual Network
 metadata:
   document_id: 44409b3f-ab8c-053d-cdf4-5d7e823a275f
-  title: Virtual Network
+  title: Dokumentation om Virtual Network – Självstudier, snabbstarter, API-referenser | Microsoft Docs
   meta.description: Learn how to use Azure Virtual Network. Quickstarts, tutorials, samples, and more, show you how to deploy a virtual network, control traffic filtering and routing, and connect a virtual network to other virtual networks.
   services: virtual-network
   author: jdial
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/23/2018
   ms.author: jdial
-  ms.openlocfilehash: 1290371373b2373bb935ef81d722e0596df01e42
-  ms.sourcegitcommit: e2adef58c03b0a780173df2d988907b5cb809c82
+  ms.openlocfilehash: 7d6e02f7031c8414d28fba8e1baab8b35eb14968
+  ms.sourcegitcommit: 638599eb548e41f341c54e14b29480ab02655db1
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/28/2018
-  ms.locfileid: "32187902"
+  ms.lasthandoff: 06/21/2018
+  ms.locfileid: "36309679"
 abstract:
   description: Lär dig hur du använder Azure Virtual Network. Våra snabbstarter, självstudier och exempel med mera visar dig hur du distribuerar ett virtuellt nätverk, styr trafikfiltrering och routning samt ansluter ett virtuellt nätverk till andra virtuella nätverk.
 sections:
