--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -168,6 +168,8 @@
           href: app-service-configure-premium-tier.md
         - name: Skala ut till flera instanser
           href: ../monitoring-and-diagnostics/insights-how-to-scale.md?toc=%2fazure%2fapp-service%2ftoc.json
+        - name: Högdensitetsvärd
+          href: app-service-high-density-hosting.md
     - name: Övervaka app
       items:
         - name: Kvoter och aviseringar
